syntax = "proto3";

package facilities;

import "common.proto";

service SlotsService {
  rpc GetSlots(GetSlotsRequest) returns (GetSlotsResponse);
  rpc CreateSlot(CreateSlotRequest) returns (Slot);
  rpc UpdateSlot(UpdateSlotRequest) returns (Slot);
  rpc DeleteSlot(common.DeleteEntityRequest) returns (common.Empty);
}

message Slot {
  int32 id = 1;
  int32 unitId = 2;
  int32 dayOfWeek = 3;
  string openTime = 4;
  string closeTime = 5;
  bool active = 6;
  optional string createdAt = 7;
  optional string updatedAt = 8;
}

message GetSlotsRequest {
  optional int32 limit = 1;
  optional int32 offset = 2;
  optional int32 unitId = 3;
  optional int32 dayOfWeek = 4;
  repeated int32 ids = 5;
}

message GetSlotsResponse {
  repeated Slot items = 1;
  int32 total = 2;
}

message CreateSlotRequest {
  int32 unitId = 1;
  int32 dayOfWeek = 2;
  string openTime = 3;
  string closeTime = 4;
}

message UpdateSlotRequest {
  int32 id = 1;
  CreateSlotRequest model = 2;
}